--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   arb_utils: ^0.2.0
   recase: ^4.0.0
   json_annotation: ^4.4.0
+  rxdart: ^0.27.3
 
 dev_dependencies:
   flutter_test:
