--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: intl_extension
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+homepage: https://github.com/aabegg/intl_extension
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
