--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: intl_extension
-description: Translations without boilerplate. With an extension for strings, corresponding ARB files are created via code generator, which in turn are converted into localization files with gen-l10n.
-version: 0.0.2
+description: Translations directly from code thanks to string extension, code generation and gen-l10n. Also suitable for monorepos.
+version: 0.0.3
 homepage: https://github.com/aabegg/intl_extension
 
 environment:
